axion-ui/manifests/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: axionui-ingress
    annotations:
      appgw.ingress.kubernetes.io/ssl-redirect: "false"
  spec:
    ingressClassName: azure-application-gateway
    rules:
      - host: axionui.twivaraai.online
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: axionui-service
                  port:
                    number: 8080
